feat: add input tips in input component

--- a/index.html
+++ b/index.html
@@ -260,10 +260,16 @@ body .container .main section .title-bar .title {
                     </li>
                 </ul>
             </ul>
+            <div>
+                <h1 style="color:white;text-align: center;">给文媒er的新年祝福</h1>
+            </div>
             <div class="shop" id="talk">
-                <h1 style="color:white;">输入你的昵称</h1>
-                <input type="text" style="width: 300px;height:30px;" id="a-name"><br>
-                <button style="width: 60px;height:25px;" onclick="get()">提交</button>
+                <div style="align-self: center;text-align: center;">
+                    <input type="text" style="width: 300px;height:30px; display:inline;text-align: center;" id="a-name" placeholder="输入你的昵称">
+                    
+                </div>
+                <br>
+                <button style="width: 60px;height:25px;align-self: center;" onclick="get()">提交</button>
             </div>
             <script>
                 function get(){
