fix: change the text

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ body .container .main section .title-bar .title {
                 </ul>
             </ul>
             <div>
-                <h1 style="color:white;text-align: center;">给文媒er的新年祝福</h1>
+                <h1 style="color:white;text-align: center;">wch在这里给大家拜年了</h1>
             </div>
             <div class="shop" id="talk">
                 <div style="align-self: center;text-align: center;">
