feat: add backend

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 }
  
 ::placeholder {
-    color: #009bff66;
+    color: #e0ebf366;
 }
  
 a {
     text-decoration: none;
 }
- 
+
 body .container {
-    background-color: #1e1e22;
+    background-color:black;
     box-sizing: border-box;
     height: 500vw;
     padding: 0 2vw;
