--- a/index1.html
+++ b/index1.html
@@ -86,6 +86,74 @@ var Heart = function(x,y){
         this.vertices.push(vector);
     }
 }
+
+function render(a){
+    requestAnimationFrame(render);
+ 
+    hearts.push(new Heart())
+    ctx.clearRect(0,0,ww,wh);
+    for (var i = 0; i < hearts.length; i++) {
+        hearts[i].draw();
+        if(hearts[i].size <= 0){
+            hearts.splice(i,1);
+            i--;
+        }
+    }
+}
+
+function Fire(x, y, size, direction, rgb, a, type){
+    var Fire = Object();
+    Fire.canvas = document.createElement("canvas");//创建画布
+    Fire.ctx = Fire.canvas.getContext("2d");
+    Fire.x = x; //初始位置
+    Fire.y = y;
+    Fire.rgb = rgb; //颜色属性
+    Fire.a = a; //透明度
+    Fire.type = type;//我写了两种火花的类型圆形和方形
+    Fire.v = 5 + Math.random() * 5; //随机初始速度
+    Fire.av = 1;//加速度
+    Fire.flag = true;
+    Fire.translate = false; //大小转换标志
+    Fire.direction=direction;//方向
+    Fire.size = size; //火花大小
+    Fire.canvas.width=10;
+    Fire.canvas.height=10;
+    Fire.color = Fire.rgb + Fire.a.toString()+")"; //rgba颜色和透明度属性   
+    
+    Fire.gradient = Fire.ctx.createRadialGradient(5, 5, 0, 5, 5, 10);
+    Fire.gradient.addColorStop( 0, 'rgba(255,255,255,1)' );
+    Fire.gradient.addColorStop( 0.4, Fire.color );
+    Fire.gradient.addColorStop( 1, 'rgba(0,0,0,0)' );
+    Fire.ctx.fillStyle=Fire.gradient;
+    Fire.ctx.fillRect(0, 0, Fire.canvas.width, Fire.canvas.height);
+   
+    return Fire;
+}
+
+/*通过创建火花实例来组建烟花*/
+var Heart2=function load_yanhua(x, y){//count为火花个数,x、y为位置
+    var count=8;
+    var i;
+    var fires = new Array();//火花数组即一个烟花
+    var type = Math.round(Math.random());
+    var random = Math.round(Math.random());
+    if(random == 0){
+        var rgb  = create_color();//生成随机颜色
+        for(i=0;i<count;i++){
+            direction = Math.random() * Math.PI * 2;
+            fires.push(Fire(x, y, 15, direction, rgb, 1, type));
+        }
+    }
+    else{
+        for(i=0;i<count;i++){
+            var rgb = create_color();
+            direction = Math.random() * Math.PI * 2;
+            fires.push(Fire(x, y, 15, direction, rgb, 1, type));
+        }
+    }
+    
+    return fires;//返回一个火花数组（即一个烟花）
+}
  
 Heart.prototype.draw = function(){
     this.size -= this.speedSize;
@@ -108,21 +176,18 @@ Heart.prototype.draw = function(){
     ctx.fill()
     ctx.restore();
 };
- 
- 
-function render(a){
-    requestAnimationFrame(render);
- 
-    hearts.push(new Heart())
-    ctx.clearRect(0,0,ww,wh);
-    for (var i = 0; i < hearts.length; i++) {
-        hearts[i].draw();
-        if(hearts[i].size <= 0){
-            hearts.splice(i,1);
-            i--;
-        }
-    }
+
+/*生成颜色颜色*/
+function create_color(){
+    var r = Math.round(Math.random() * 255);
+    var g = Math.round(Math.random() * 255);
+    var b = Math.round(Math.random() * 255);
+    rgb = "rgba("+ r.toString()+ "," + g.toString() +"," + b.toString() + ",";
+
+    return rgb;
 }
+ 
+
  
  
 onResize();
@@ -145,7 +210,7 @@ window.onload=function starttime(){
         var hour = parseInt(time/3600)-24*day;    // 小时 60*60 总小时数-过去的小时数=现在的小时数
         var minute = parseInt(time%3600/60); // 分 -(day*24) 以60秒为一整份 取余 剩下秒数 秒数/60 就是分钟数
         var second = parseInt(time%60);  // 以60秒为一整份 取余 剩下秒数
-        obj.innerHTML="<br>距离春节还有：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"<br><span>愿我所想的事顺心如意。<br>and may the things I think of be all right.<br>祝"+window.sessionStorage.getItem('name')+"新年快乐！"+"</span>"
+        obj.innerHTML="<br>距离春节还有：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"<br><span>愿平安喜乐，诸事顺遂。<br>存远志，常读书。乐交友，惜四时.<br>祝"+window.sessionStorage.getItem('name')+"新年快乐！"+"</span>"
         return true;
     }
 </script>
