--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
 body{
   overflow: hidden;
   margin: 0;
-  background-image: url("backend.jpg");
+  background-image: url("backend.jpg") no-repeat ;
 
 }
 h1{
